add-ons/longhorn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: my-auth-middleware
  namespace: longhorn-system
spec:
  basicAuth:
    removeHeader: true
    secret: basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replacepath
  namespace: longhorn-system
spec:
 replacePathRegex:
    regex: "^/longhorn(/|$)(.*)"
    replacement: "/${2}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
    traefik.ingress.kubernetes.io/router.middlewares: "longhorn-system-replacepath@kubernetescrd,longhorn-system-my-auth-middleware@kubernetescrd"
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ptisma.xyz
    - www.ptisma.xyz
    secretName: ptisma-xyz-tls
  rules:
  - host: ptisma.xyz
    http:
      paths:
        - pathType: Prefix
          path: /longhorn/
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
  - host: www.ptisma.xyz
    http:
      paths:
        - pathType: Prefix
          path: /longhorn/
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
